# web_server

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  auth_8cpp.html  auth_8cpp__incl.map  auth_8cpp__incl.md5  auth_8hpp.html  auth_8hpp__dep__incl.map  auth_8hpp__dep__incl.md5  auth_8hpp__incl.map  auth_8hpp__incl.md5  auth_8hpp_source.html  auth__service_8cpp.html  auth__service_8cpp__incl.map  auth__service_8cpp__incl.md5  auth__service_8hpp.html  auth__service_8hpp__dep__incl.map  auth__service_8hpp__dep__incl.md5  auth__service_8hpp__incl.map  auth__service_8hpp__incl.md5  auth__service_8hpp_source.html  authorized_8cpp.html  authorized_8cpp__incl.map  authorized_8cpp__incl.md5  authorized_8hpp.html  authorized_8hpp__dep__incl.map  authorized_8hpp__dep__incl.md5  authorized_8hpp__incl.map  authorized_8hpp__incl.md5  authorized_8hpp_source.html  bad__request_8cpp.html  bad__request_8cpp__incl.map  bad__request_8cpp__incl.md5  bad__request_8hpp.html  bad__request_8hpp__dep__incl.map  bad__request_8hpp__dep__incl.md5  bad__request_8hpp__incl.map  (+451 more)
.github/workflows/: docs.yml  release.yml
libs/: CMakeLists.txt
libs/WebServer/: CMakeLists.txt
libs/WebServer/cmake/: Installing.cmake
libs/WebServer/include/: web_server.hpp  ws_logger.hpp  ws_options.hpp
libs/WebServer/resources/db/: ws.db3
libs/WebServer/resources/public/: auth.html
libs/WebServer/resources/public/scripts/: auth.js
libs/WebServer/resources/public/storage/: text.txt
libs/WebServer/resources/ssl/: cert.pem  dh.pem  key.pem
libs/WebServer/resources/test/html/: test.html  test1.html
libs/WebServer/src/: helper.hpp  request_handler.cpp  request_handler.hpp  router.cpp  router.hpp  ssl.cpp  ssl.hpp  web_server.cpp  ws_logger.cpp  ws_options.cpp
libs/WebServer/src/responses/: auth.cpp  auth.hpp  authorized.cpp  authorized.hpp  file.cpp  file.hpp  get.cpp  get.hpp  login.cpp  login.hpp  post.cpp  post.hpp  response.cpp  response.hpp  response_handler.cpp  response_handler.hpp
libs/WebServer/src/responses/error/: bad_request.cpp  bad_request.hpp  not_found.cpp  not_found.hpp  server_error.cpp  server_error.hpp
libs/WebServer/src/services/: auth_service.cpp  auth_service.hpp  db_service.cpp  db_service.hpp
libs/WebServer/src/utility/: config.hpp  db.hpp  files.hpp  helper.hpp  messages.hpp  net_helper.hpp  params.hpp  segments.hpp  types.hpp  url.hpp
libs/WebServer/tests/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+70 more)
src/: main.cpp
